Fix critical issues: Add interaction simulation and authentication support
Critical Fixes:
- Add automatic interaction simulation for landing pages (scrolls, clicks)
- Add authentication support (API keys, Bearer tokens, custom headers)
- Improve error messages for 401/403 with actionable guidance
- Update ActorInput type with new options
- Update actor.json schema with new input fields
- Update README with usage examples

Based on extreme test findings:
- Landing page discovery: 0% -> should improve significantly
- Protected API processing: Now supported with auth
- Error handling: Much more helpful for users

Files modified:
- src/types.ts: Added auth and interaction options
- src/handlers/discovery-handler.ts: Added simulateInteractions()
- src/handlers/api-handler.ts: Added auth support, better errors
- .actor/actor.json: Added new input fields
- README.md: Documented new features

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dev": "tsc --watch",
     "test": "npm run build && node dist/test-main.js",
     "test:watch": "npm run dev & node --watch dist/test-main.js",
+    "test:extreme": "node extreme-test-suite.js",
+    "analyze:extreme": "node analyze-extreme-results.js",
     "verify": "node verify-build.js"
   },
   "keywords": [
