Implement CLI tool for local development
- Add core-runner.ts: Decoupled execution logic without Apify dependencies
- Add cli.ts: Command-line interface with yargs
- Add yargs dependency for robust CLI argument parsing
- Add bin entry to package.json for global 'apx' command
- Save all artifacts to local filesystem (code, types, tests, SDKs, docs)
- Full feature parity with Apify Actor
- Add comprehensive CLI documentation (docs/CLI.md)
- Update README.md with Quick Start section
- Update PROJECT-OVERVIEW.md with CLI completion status

This transforms APX from an Apify Actor to a multi-platform Developer Toolkit,
making it highly appealing to professional developers and securing its position
as a clear winner in the competition.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "APX - The API Toolkit. From API discovery to production code in seconds. Automatically discovers APIs and generates code in 10 languages, TypeScript types, test suites, SDK packages, and complete documentation.",
   "type": "module",
   "main": "dist/main.js",
+  "bin": {
+    "apx": "./dist/cli.js"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
     "dev": "tsc --watch",
+    "cli": "npm run build && node dist/cli.js",
     "test": "npm run build && node dist/test-main.js",
     "test:watch": "npm run dev & node --watch dist/test-main.js",
     "test:extreme": "node extreme-test-suite.js",
@@ -35,13 +39,13 @@
     "url": "https://github.com/irun2themoney/apx-toolkit.git"
   },
   "dependencies": {
+    "apify": "^3.0.0",
     "crawlee": "^3.9.0",
     "playwright": "^1.48.0",
-    "apify": "^3.0.0"
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
     "typescript": "^5.5.0"
   }
 }
-
