🎉 APX Toolkit published to npm!
- Package: @apx/toolkit@1.0.0
- Published to npm registry
- Available globally: npm install -g @apx/toolkit
- CLI command: apx

APX Toolkit is now available on both Apify and npm platforms!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "noFallthroughCasesInSwitch": true,
     "types": []
   },
-  "include": ["src/**/*", "cli.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
 
