🧹 Clean up project and update documentation
- Organize documentation into docs/ folders
- Remove temporary test files and reports
- Update README with badges and improved structure
- Update .gitignore to exclude test files
- Update Apify Actor description
- Prepare for npm and Apify updates

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,9 @@ yarn-error.log*
 # Testing
 coverage/
 .nyc_output/
+test-input.json
+test-fuzzer-input.json
+test-interaction.json
+test-output/
+extreme-test-report-*.json
 
