--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ Thumbs.db
 # Logs
 *.log
 npm-debug.log*
+test-*.log
+stress-test-*.log
+comprehensive-test-*.log
 yarn-debug.log*
 yarn-error.log*
 
