--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apx-toolkit",
   "version": "1.0.3",
-  "description": "APX - The API Toolkit. Automatically discovers APIs (REST, GraphQL, WebSocket) and generates complete integration packages: code in 12 languages, TypeScript types, test suites, SDK packages, and API documentation. Saves weeks of work in seconds.",
+  "description": "🚀 APX Toolkit - The easiest way to discover and integrate with any API! Automatically discovers APIs and generates everything you need: code in 12 languages, TypeScript types, test suites, SDK packages, API documentation, mock servers, performance reports, contract tests, and more. Saves 2-4 weeks of work → 10 seconds!",
   "type": "module",
   "main": "dist/main.js",
   "bin": {
@@ -48,7 +48,12 @@
     "web-scraping",
     "api-testing",
     "oauth",
-    "api-automation"
+    "api-automation",
+    "mock-server",
+    "performance-benchmarking",
+    "contract-testing",
+    "mcp-integration",
+    "x402-protocol"
   ],
   "author": "irun2themoney",
   "license": "ISC",
