🔒 Add comprehensive security hardening
Security Enhancements:
- Created SECURITY-HARDENING.md guide
- Added Dependabot configuration (.github/dependabot.yml)
- Added security audit workflow (.github/workflows/security-audit.yml)
- Enhanced .gitignore with security patterns
- Added security file patterns (keys, certs, secrets)

Security Features:
- Automatic dependency updates (Dependabot)
- Weekly security audits (GitHub Actions)
- Secret scanning prevention
- Enhanced .gitignore patterns

Next Steps:
- Enable GitHub Dependabot alerts
- Enable Secret Scanning
- Enable Code Scanning
- Set up Branch Protection
- Review collaborator access

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,15 @@ test-interaction.json
 test-output/
 extreme-test-report-*.json
 
+# Security
+*.pem
+*.key
+*.cert
+*.p12
+*.pfx
+secrets/
+credentials/
+*.secret
+.env.*
+!.env.example
+
